# akcom-udpecho

./: .gitignore  COPYING  ChangeLog.md  GNUmakefile  GNUmakefile.version  Makefile.am  README.md  TODO.md  acinclude.m4  akcom-udpecho.spec  autogen.sh  configure.ac
build-aux/: git-tar-name.txt
docs/: akcom-udpecho.1.in  akcom-udpecho.8.in  akcom-udpechod.8.in
src/: GNUmakefile  akcom-udpecho.c  akcom-udpecho.h  akcom-udpechod.c
